# checknote

./: .bazelrc  .editorconfig  .gitignore  AGENTS.md  BUILD.bazel  MODULE.bazel  angular.json  package-lock.json  package.json  paket.dependencies  tsconfig.json
api/: BUILD.bazel
api/src/App/: BUILD.bazel  ChecknoteApi.cs  Program.cs  appsettings.Development.json  appsettings.json
api/src/App/Authentication/: AuthenticationExtensions.cs  ChecknoteKeycloakOptions.cs  JwtBearerConfigureOptions.cs
api/src/App/ErrorPages/: error.html
api/src/App/Logging/: SerilogRequestLogPolicy.cs  SerilogRequestLogPolicyTests.cs
api/src/App/Middleware/: ErrorResponsePolicy.cs  GlobalExceptionHandler.cs
api/src/Checknote.Api/: BUILD.bazel  Checknote.Api.csproj  ChecknoteApi.cs  HelloWorldRouteTest.cs  web.config
api/src/Common/Application/: ApplicationConfiguration.cs  BUILD.bazel
api/src/Common/Application/Behaviors/: ValidationPipelineBehavior.cs
api/src/Common/Application/Messaging/: ICommand.cs  ICommandHandler.cs  IQuery.cs  IQueryHandler.cs
api/src/Common/Domain/: BUILD.bazel  Entity.cs  Error.cs  ErrorType.cs  Result.cs  ValidationError.cs
api/src/Common/Presentation/: BUILD.bazel
api/src/Common/Presentation/Endpoints/: EndpointRegistrationExtensions.cs
api/src/Common/Presentation/Results/: ApiResults.cs  ResultExtensions.cs
api/src/DbTool/: BUILD.bazel  ChecknoteDatabaseTool.cs  Program.cs
api/src/Modules/Todos/Application/: AssemblyReference.cs  BUILD.bazel
api/src/Modules/Todos/Application/Abstractions/: ITodoRepository.cs
api/src/Modules/Todos/Composition/: BUILD.bazel
api/src/Modules/Todos/Composition/Todos/: TodosModule.cs
api/src/Modules/Todos/Domain/: BUILD.bazel
api/src/Modules/Todos/Domain/Todos/: Todo.cs  TodoErrors.cs
api/src/Modules/Todos/Infrastructure/: BUILD.bazel
api/src/Modules/Todos/Presentation/: AssemblyReference.cs  BUILD.bazel
api/src/Modules/Users/Application/: AssemblyReference.cs  BUILD.bazel
api/src/Modules/Users/Composition/: BUILD.bazel
api/src/Modules/Users/Domain/: BUILD.bazel
api/src/Modules/Users/Infrastructure/: BUILD.bazel
api/src/Modules/Users/Presentation/: AssemblyReference.cs  BUILD.bazel
api/test/unit/: BUILD.bazel
api/test/unit/App/Authentication/: JwtBearerConfigureOptionsTests.cs
api/test/unit/App/Authorization/: ApiAuthorizationTests.cs
api/test/unit/App/Logging/: SerilogRequestLogPolicyTests.cs
api/test/unit/App/Middleware/: ErrorResponsePolicyTests.cs
api/test/unit/Modules/Database/: SchemaBoundaryTests.cs
api/test/unit/Support/: TestAssert.cs
cdev/: BUILD.bazel  angular.json  tsconfig.spec.json
cdev/src/: main.ts  styles.css
cdev/src/app/: app.component.html  app.component.ts  app.routes.ts
cdev/src/common/application/: BUILD.bazel  index.ts
cdev/src/common/application/auth/: auth-client.ts
cdev/src/common/application/confirmations/: confirmation-dialog.ts
cdev/src/common/application/errors/: error-reporter.ts
cdev/src/common/application/messaging/: query.ts
cdev/src/common/composition/: BUILD.bazel  index.ts  provide-common.ts
cdev/src/common/composition/auth/: auth-client.token.ts  auth-route.guard.ts
cdev/src/common/composition/confirmations/: confirmation-dialog.token.ts
cdev/src/common/composition/errors/: error-reporter.token.ts
cdev/src/common/composition/http/: auth-token.interceptor.ts  http-error.interceptor.ts
cdev/src/common/domain/: BUILD.bazel  application-error.ts  index.ts
cdev/src/common/infrastructure/: BUILD.bazel  api-request.ts  api-response.ts  browser-clock.ts  http-error-response.ts  index.ts  keycloak-auth-client.ts  mock-endpoint-logger.ts
cdev/src/common/presentation/: BUILD.bazel  index.ts
cdev/src/common/presentation/confirmations/: cdk-confirmation-dialog.component.css  cdk-confirmation-dialog.component.html  cdk-confirmation-dialog.component.ts  cdk-confirmation-dialog.ts  material-confirmation-dialog.component.css  material-confirmation-dialog.component.html  material-confirmation-dialog.component.ts  material-confirmation-dialog.ts
cdev/src/common/presentation/errors/: global-error-banner.component.css  global-error-banner.component.html  global-error-banner.component.ts  global-error-handler.ts  global-error-state.ts
cdev/src/modules/todos/application/: BUILD.bazel  index.ts
cdev/src/modules/todos/composition/: BUILD.bazel  index.ts  provide-todos-module.ts
cdev/src/modules/todos/domain/: BUILD.bazel  index.ts  todo-errors.ts
cdev/src/modules/todos/infrastructure/: BUILD.bazel  index.ts  local-storage-todo-repository.ts  mock-todos-endpoint.ts
cdev/src/modules/todos/presentation/: BUILD.bazel  index.ts  todos-page.facade.ts
cdev/src/modules/users/application/: BUILD.bazel  index.ts
cdev/src/modules/users/composition/: BUILD.bazel  index.ts  provide-users-module.ts  users.tokens.ts
cdev/src/modules/users/domain/: BUILD.bazel  index.ts
cdev/src/modules/users/infrastructure/: BUILD.bazel  index.ts  local-user-repository.ts  mock-users-endpoint.ts
cdev/src/modules/users/presentation/: BUILD.bazel  index.ts  user-summary.facade.ts
cdev/test/architecture/: BUILD.bazel
cdev/test/unit/: BUILD.bazel
cdev/test/unit/angular/: angular-testing-harness.spec.ts  auth-route-guard.spec.ts  auth-token-interceptor.spec.ts  http-error-interceptor.spec.ts  http-todo-repository.spec.ts  http-user-repository.spec.ts  keycloak-auth-client.spec.ts  user-summary-facade.spec.ts
cdev/test/unit/common/domain/: result.spec.ts
deployment/database/: BUILD.bazel  ChecknoteDatabaseTool.cs  Program.cs
deployment/keycloak/: BUILD.bazel  README.md  install-checknote-theme.ps1  keycloak.realm.template.json
deployment/keycloak/themes/checknote/login/: theme.properties
tools/: BUILD.bazel  api-route-smoke.ps1  apply-database.ps1  architecture-rules.json  build-angular.bat  build-angular.mjs  cdev_architecture.bzl  check-boundaries.mjs  check-boundaries.test.mjs  csharp_rules.bzl  keycloak-current-user-smoke.ps1
tools/auth-smoke/: BUILD.bazel  Program.cs
tools/test/: BUILD.bazel  check-boundaries.test.mjs
(+110 files in other folders)
