filegroup(
    name = "workspace_files",
    srcs = [
        "package-lock.json",
        "package.json",
        "tsconfig.json",
    ],
    visibility = ["//visibility:public"],
)

alias(
    name = "architecture_check",
    actual = "//cdev:architecture_check",
)

alias(
    name = "architecture_checker_tests",
    actual = "//tools:check_boundaries_test",
)

alias(
    name = "todo_app",
    actual = "//cdev:todo_app",
)
