exports_files(
    [".editorconfig"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "workspace_files",
    srcs = [
        "package-lock.json",
        "package.json",
        "tsconfig.json",
    ],
    visibility = ["//visibility:public"],
)

alias(
    name = "architecture_check",
    actual = "//cdev:architecture_check",
)

alias(
    name = "architecture_checker_tests",
    actual = "//tools:check_boundaries_test",
)

alias(
    name = "todo_app",
    actual = "//cdev:todo_app",
)

alias(
    name = "checknote_api",
    actual = "//api:checknote_api",
)

alias(
    name = "checknote_api_zip",
    actual = "//api:checknote_api_zip",
)

alias(
    name = "checknote_site_zip",
    actual = "//api:checknote_site_zip",
)

alias(
    name = "hello_world_csharp_smoke",
    actual = "//api:hello_world_csharp_smoke",
)
