module(name = "checknote", version = "0.1.0")

bazel_dep(name = "rules_dotnet", version = "0.21.5")
bazel_dep(name = "rules_pkg", version = "1.0.1")

dotnet = use_extension("@rules_dotnet//dotnet:extensions.bzl", "dotnet")
dotnet.toolchain(dotnet_version = "9.0.307")
use_repo(dotnet, "dotnet_toolchains")

register_toolchains("@dotnet_toolchains//:all")
