module(name = "checknote", version = "0.1.0")

bazel_dep(name = "rules_dotnet", version = "0.21.5")
bazel_dep(name = "gazelle", version = "0.44.0", repo_name = "bazel_gazelle")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.7.1")
bazel_dep(name = "rules_pkg", version = "1.0.1")

dotnet = use_extension("@rules_dotnet//dotnet:extensions.bzl", "dotnet")
dotnet.toolchain(dotnet_version = "10.0.100")
use_repo(dotnet, "dotnet_toolchains")

register_toolchains("@dotnet_toolchains//:all")

main_extension = use_extension("//third_party/dotnet/deps:paket.main_extension.bzl", "main_extension")
use_repo(main_extension, "paket.main")
