package(default_visibility = ["//visibility:public"])

package_group(
    name = "app_package",
    packages = ["//cdev"],
)

package_group(
    name = "all_cdev_packages",
    packages = [
        "//cdev/src/common/...",
        "//cdev/src/modules/...",
        "//cdev/test/...",
    ],
)

package_group(
    name = "todos_domain_consumers",
    packages = [
        "//cdev/src/modules/todos/application",
        "//cdev/src/modules/todos/composition",
        "//cdev/src/modules/todos/infrastructure",
        "//cdev/src/modules/todos/presentation",
    ],
)

package_group(
    name = "todos_application_consumers",
    packages = [
        "//cdev/src/modules/todos/composition",
        "//cdev/src/modules/todos/infrastructure",
        "//cdev/src/modules/todos/presentation",
    ],
)

package_group(
    name = "todos_infrastructure_consumers",
    packages = ["//cdev/src/modules/todos/composition"],
)

package_group(
    name = "todos_presentation_consumers",
    packages = [
        "//cdev",
        "//cdev/src/modules/todos/composition",
        "//cdev/test/unit",
    ],
)

package_group(
    name = "todos_composition_token_consumers",
    packages = [
        "//cdev/src/modules/todos/composition",
        "//cdev/src/modules/todos/presentation",
    ],
)

package_group(
    name = "users_domain_consumers",
    packages = [
        "//cdev/src/modules/users/application",
        "//cdev/src/modules/users/composition",
        "//cdev/src/modules/users/infrastructure",
        "//cdev/src/modules/users/presentation",
    ],
)

package_group(
    name = "users_application_consumers",
    packages = [
        "//cdev/src/modules/users/composition",
        "//cdev/src/modules/users/infrastructure",
        "//cdev/src/modules/users/presentation",
    ],
)

package_group(
    name = "users_infrastructure_consumers",
    packages = ["//cdev/src/modules/users/composition"],
)

package_group(
    name = "users_presentation_consumers",
    packages = [
        "//cdev",
        "//cdev/src/modules/users/composition",
    ],
)

package_group(
    name = "users_composition_token_consumers",
    packages = [
        "//cdev/src/modules/users/composition",
        "//cdev/src/modules/users/presentation",
    ],
)

filegroup(
    name = "app_shell_sources",
    srcs = glob([
        "public/**",
        "src/*.css",
        "src/*.html",
        "src/*.ts",
        "src/app/**",
    ]) + [
        "angular.json",
        "tsconfig.app.json",
        "tsconfig.spec.json",
        "vitest.config.mjs",
        "//:workspace_files",
    ],
)

filegroup(
    name = "layer_sources",
    srcs = [
        "//cdev/src/common/composition",
        "//cdev/src/modules/todos/composition",
        "//cdev/src/modules/users/composition",
    ],
)

filegroup(
    name = "app_sources",
    srcs = [
        ":app_shell_sources",
        ":layer_sources",
    ],
)

genrule(
    name = "architecture_check",
    srcs = [
        ":app_shell_sources",
        ":layer_sources",
        "//tools:architecture-rules.json",
        "//tools:check-boundaries.mjs",
    ],
    outs = ["architecture-check.stamp"],
    cmd = "node tools/check-boundaries.mjs --src-dir cdev/src && touch $@",
    cmd_bat = "node tools\\check-boundaries.mjs --src-dir cdev\\src && echo ok > $@",
)

genrule(
    name = "todo_app",
    srcs = [
        ":app_sources",
        ":architecture_check",
        "//tools/test:unit_tests",
    ],
    tools = [
        "//tools:build_angular_bat",
        "//tools:build_angular_mjs",
    ],
    outs = ["todo-app.zip"],
    cmd = """
set -euo pipefail
OUTDIR="$$(pwd)/$(@D)/todo-app"
ZIPFILE="$$(pwd)/$@"
rm -rf "$$OUTDIR"
cd cdev
node ../tools/build-angular.mjs --workspace . --target checknote:build:production --output "$$OUTDIR"
cd "$$OUTDIR"
zip -qr "$$ZIPFILE" .
""",
    cmd_bat = "call $(location //tools:build_angular_bat) \"$(@D)\\todo-app\" \"$@\"",
)
