exports_files([
    "architecture-rules.json",
    "build-angular.bat",
    "build-angular.mjs",
    "cdev_architecture.bzl",
    "check-boundaries.test.mjs",
    "check-boundaries.mjs",
])

filegroup(
    name = "build_angular_bat",
    srcs = ["build-angular.bat"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "build_angular_mjs",
    srcs = ["build-angular.mjs"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "check_boundaries_test",
    srcs = [
        "architecture-rules.json",
        "check-boundaries.test.mjs",
        "check-boundaries.mjs",
    ],
    outs = ["check-boundaries-test.stamp"],
    cmd = "node tools/check-boundaries.test.mjs && touch $@",
    cmd_bat = "node tools\\check-boundaries.test.mjs && echo ok > $@",
    visibility = ["//visibility:public"],
)
