load("@rules_dotnet//dotnet:defs.bzl", "publish_binary")
load("@rules_pkg//pkg:zip.bzl", "pkg_zip")
load("//tools:csharp_rules.bzl", "checknote_csharp_binary", "checknote_csharp_library")

package(default_visibility = ["//visibility:public"])

checknote_csharp_library(
    name = "db_tool_lib",
    srcs = ["ChecknoteDatabaseTool.cs"],
    deps = [
        "//api/src/Modules/Todos/Infrastructure:infrastructure",
        "//api/src/Modules/Users/Infrastructure:infrastructure",
        "@paket.main//microsoft.entityframeworkcore",
        "@paket.main//microsoft.entityframeworkcore.relational",
        "@paket.main//microsoft.entityframeworkcore.sqlserver",
    ],
    out = "Checknote.Deployment.Database",
    target_frameworks = ["net10.0"],
)

checknote_csharp_binary(
    name = "checknote_db_tool",
    srcs = ["Program.cs"],
    deps = [":db_tool_lib"],
    target_frameworks = ["net10.0"],
)

publish_binary(
    name = "checknote_db_tool_publish",
    binary = ":checknote_db_tool",
    self_contained = True,
    target_framework = "net10.0",
)

pkg_zip(
    name = "checknote_db_tool_zip",
    srcs = [":checknote_db_tool_publish"],
    out = "checknote-db-tool.zip",
)
