package(default_visibility = ["//visibility:public"])

filegroup(
    name = "keycloak_config_templates",
    srcs = [
        "README.md",
        "install-checknote-theme.ps1",
        "keycloak.realm.template.json",
        ":keycloak_login_theme",
    ],
)

filegroup(
    name = "keycloak_login_theme",
    srcs = glob([
        "themes/checknote/**",
    ]),
)

genrule(
    name = "checknote_keycloak_theme_zip",
    srcs = [
        "themes/checknote/login/resources/css/checknote-login.css",
        "themes/checknote/login/theme.properties",
    ],
    outs = ["checknote-keycloak-theme.zip"],
    cmd_bat = """
powershell -NoProfile -ExecutionPolicy Bypass -Command "$$ErrorActionPreference = 'Stop'; $$outDir = (Resolve-Path '$(@D)').Path; $$zipPath = Join-Path $$outDir 'checknote-keycloak-theme.zip'; $$stage = Join-Path $$outDir 'checknote-keycloak-theme-staging'; Remove-Item -LiteralPath $$stage -Recurse -Force -ErrorAction SilentlyContinue; New-Item -ItemType Directory -Force -Path (Join-Path $$stage 'themes\\checknote\\login\\resources\\css') | Out-Null; Copy-Item -Path '$(location themes/checknote/login/theme.properties)' -Destination (Join-Path $$stage 'themes\\checknote\\login\\theme.properties') -Force; Copy-Item -Path '$(location themes/checknote/login/resources/css/checknote-login.css)' -Destination (Join-Path $$stage 'themes\\checknote\\login\\resources\\css\\checknote-login.css') -Force; Compress-Archive -Path (Join-Path $$stage 'themes') -DestinationPath $$zipPath -Force"
""",
)
