load("//tools:csharp_rules.bzl", "checknote_csharp_library")

package(default_visibility = ["//visibility:private"])

checknote_csharp_library(
    name = "application",
    srcs = glob(["**/*.cs"]),
    deps = ["//api/src/Common/Domain:domain"],
    out = "Checknote.Common.Application",
    target_frameworks = ["net9.0"],
    visibility = ["//api:common_application_consumers"],
)
