load("@rules_dotnet//dotnet:defs.bzl", "csharp_library")

package(default_visibility = ["//visibility:private"])

csharp_library(
    name = "domain",
    srcs = glob(["**/*.cs"]),
    out = "Checknote.Common.Domain",
    target_frameworks = ["net9.0"],
    visibility = ["//api:common_domain_consumers"],
)
