load("//tools:csharp_rules.bzl", "checknote_csharp_library")

package(default_visibility = ["//visibility:private"])

filegroup(
    name = "test_sources",
    srcs = glob(["**/*.cs"]),
    visibility = ["//api/test/unit:__pkg__"],
)

checknote_csharp_library(
    name = "domain",
    srcs = glob(["**/*.cs"]),
    out = "Checknote.Common.Domain",
    target_frameworks = ["net9.0"],
    visibility = ["//api:common_domain_consumers"],
)
