load("//tools:csharp_rules.bzl", "checknote_csharp_library")

package(default_visibility = ["//visibility:private"])

checknote_csharp_library(
    name = "presentation",
    srcs = glob(["**/*.cs"]),
    deps = ["//api/src/Common/Domain:domain"],
    out = "Checknote.Common.Presentation",
    project_sdk = "web",
    target_frameworks = ["net9.0"],
    visibility = ["//api:common_presentation_consumers"],
)
