load("//tools:cdev_architecture.bzl", "cdev_layer")

package(default_visibility = ["//visibility:private"])

cdev_layer(
    name = "application",
    area = "common",
    layer = "application",
    srcs = glob(["**/*.ts"]),
    deps = ["//cdev/src/common/domain"],
    visibility = ["//cdev:all_cdev_packages"],
)
