load("//tools:cdev_architecture.bzl", "cdev_layer")

package(default_visibility = ["//visibility:private"])

cdev_layer(
    name = "composition",
    area = "common",
    layer = "composition",
    srcs = glob(["**/*.ts"]),
    deps = [
        "//cdev/src/common/application",
        "//cdev/src/common/domain",
        "//cdev/src/common/infrastructure",
    ],
    visibility = ["//cdev:app_package"],
)
