load("//tools:csharp_rules.bzl", "checknote_csharp_library")

package(default_visibility = ["//visibility:private"])

checknote_csharp_library(
    name = "application",
    srcs = glob(["**/*.cs"]),
    deps = [
        "//api/src/Common/Application:application",
        "//api/src/Modules/Todos/Domain:domain",
        "@paket.main//fluentvalidation",
        "@paket.main//mediatr",
        "@paket.main//mediatr.contracts",
    ],
    out = "Checknote.Modules.Todos.Application",
    target_frameworks = ["net9.0"],
    visibility = ["//api:todos_application_consumers"],
)
