load("//tools:csharp_rules.bzl", "checknote_csharp_library")

package(default_visibility = ["//visibility:private"])

checknote_csharp_library(
    name = "composition",
    srcs = glob(["**/*.cs"]),
    deps = [
        "//api/src/Common/Presentation:presentation",
        "//api/src/Modules/Todos/Application:application",
        "//api/src/Modules/Todos/Infrastructure:infrastructure",
        "//api/src/Modules/Todos/Presentation:presentation",
        "@paket.main//microsoft.entityframeworkcore",
        "@paket.main//microsoft.entityframeworkcore.relational",
        "@paket.main//microsoft.entityframeworkcore.sqlserver",
    ],
    out = "Checknote.Modules.Todos.Composition",
    project_sdk = "web",
    target_frameworks = ["net9.0"],
    visibility = ["//api:todos_composition_consumers"],
)
