load("@rules_dotnet//dotnet:defs.bzl", "csharp_library")

package(default_visibility = ["//visibility:private"])

csharp_library(
    name = "domain",
    srcs = glob(["**/*.cs"]),
    deps = ["//api/src/Common/Domain:domain"],
    exports = ["//api/src/Common/Domain:domain"],
    out = "Checknote.Modules.Todos.Domain",
    target_frameworks = ["net9.0"],
    visibility = ["//api:todos_domain_consumers"],
)
