load("//tools:csharp_rules.bzl", "checknote_csharp_library")

package(default_visibility = ["//visibility:private"])

checknote_csharp_library(
    name = "domain",
    srcs = glob(["**/*.cs"]),
    deps = [
        "//api/src/Common/Domain:domain",
        "@paket.main//microsoft.data.sqlclient",
    ],
    exports = [
        "//api/src/Common/Domain:domain",
        "@paket.main//microsoft.data.sqlclient",
    ],
    out = "Checknote.Modules.Todos.Domain",
    target_frameworks = ["net10.0"],
    visibility = ["//api:todos_domain_consumers"],
)
