load("@rules_dotnet//dotnet:defs.bzl", "csharp_library")

package(default_visibility = ["//visibility:private"])

csharp_library(
    name = "infrastructure",
    srcs = glob(["**/*.cs"]),
    deps = [
        "//api/src/Modules/Todos/Application:application",
        "//api/src/Modules/Todos/Domain:domain",
    ],
    out = "Checknote.Modules.Todos.Infrastructure",
    target_frameworks = ["net9.0"],
    visibility = ["//api:todos_infrastructure_consumers"],
)
