load("//tools:csharp_rules.bzl", "checknote_csharp_library")

package(default_visibility = ["//visibility:private"])

checknote_csharp_library(
    name = "infrastructure",
    srcs = glob(["**/*.cs"]),
    deps = [
        "//api/src/Modules/Todos/Application:application",
        "//api/src/Modules/Todos/Domain:domain",
        "@paket.main//microsoft.data.sqlclient",
        "@paket.main//microsoft.entityframeworkcore",
        "@paket.main//microsoft.entityframeworkcore.relational",
        "@paket.main//microsoft.entityframeworkcore.sqlserver",
    ],
    out = "Checknote.Modules.Todos.Infrastructure",
    target_frameworks = ["net10.0"],
    visibility = ["//api:todos_infrastructure_consumers"],
)
