load("//tools:csharp_rules.bzl", "checknote_csharp_library")

package(default_visibility = ["//visibility:private"])

checknote_csharp_library(
    name = "presentation",
    srcs = glob(["**/*.cs"]),
    deps = [
        "//api/src/Common/Application:application",
        "//api/src/Common/Presentation:presentation",
        "//api/src/Modules/Todos/Application:application",
        "//api/src/Modules/Todos/Domain:domain",
        "@paket.main//mediatr",
        "@paket.main//mediatr.contracts",
    ],
    out = "Checknote.Modules.Todos.Presentation",
    project_sdk = "web",
    run_analyzers = False,
    target_frameworks = ["net9.0"],
    visibility = ["//api:todos_presentation_consumers"],
)
