load("@rules_dotnet//dotnet:defs.bzl", "csharp_library")

package(default_visibility = ["//visibility:private"])

csharp_library(
    name = "application",
    srcs = glob(["**/*.cs"]),
    deps = [
        "//api/src/Common/Application:application",
        "//api/src/Modules/Users/Domain:domain",
    ],
    out = "Checknote.Modules.Users.Application",
    target_frameworks = ["net9.0"],
    visibility = ["//api:users_application_consumers"],
)
