load("//tools:csharp_rules.bzl", "checknote_csharp_library")

package(default_visibility = ["//visibility:private"])

filegroup(
    name = "test_sources",
    srcs = glob(["**/*.cs"]),
    visibility = ["//api/test/unit:__pkg__"],
)

checknote_csharp_library(
    name = "application",
    srcs = glob(["**/*.cs"]),
    deps = [
        "//api/src/Common/Application:application",
        "//api/src/Modules/Users/Domain:domain",
        "@paket.main//mediatr",
        "@paket.main//mediatr.contracts",
    ],
    out = "Checknote.Modules.Users.Application",
    target_frameworks = ["net9.0"],
    visibility = ["//api:users_application_consumers"],
)
